<resources>
    <string name="app_name">注册页面</string>
    <string name="login_logo_text">TJNU</string>
    <string name="login_tv_username_text">账号</string>
    <string name="login_et_username_hint">请输入账号</string>
    <string name="login_tv_password_text">密码</string>
    <string name="login_et_password_hint">请输入密码</string>
    <string name="login_tv_forgetPassword_text">忘记密码？</string>
    <string name="login_tv_noUsername_text">没有账号？</string>
    <string name="login_tv_registerByPhone_text">手机号快捷注册</string>
    <string name="login_btn_login_text">登录</string>
    <string name="login_tv_loginByOthers_text">使用第三方账号登录</string>
    <string name="register_tv_phone_text">手机号</string>
    <string name="register_et_phone_hint">请输入手机号</string>
    <string name="register_tv_code_text">验证码</string>
    <string name="register_et_code_hint">请输入验证码</string>
    <string name="register_tv_password_text">密码</string>
    <string name="register_et_password_hint">请输入密码</string>
    <string name="register_tv_verifyPassword_text">确认密码</string>
    <string name="register_et_verifyPassword_hint">请再次输入密码</string>
    <string name="register_btn_getCode_text">获取验证码</string>
    <string name="register_tv_noCode_text">没有收到验证码？</string>
    <string name="register_btn_register_text">注册</string>
    <string name="verifyIdentity_tv_phone_text">手机号</string>
    <string name="verifyIdentity_btn_verify_text">验证</string>
    <string name="resetPassword_tv_newPassword_text">新密码</string>
    <string name="resetPassword_tv_verifyPassword_text">确认密码</string>
    <string name="resetPassword_et_verifyPassword_hint">请再次输入密码</string>
    <string name="resetPassword_et_newPassword_hint">请输入新密码</string>
    <string name="resetPassword_btn_reset_text">重置密码</string>
</resources>