<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resetPassword_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView style="@style/layout_resetPassword_topImage" />

    <Button
        android:layout_width="@dimen/btn_back_width"
        android:layout_height="@dimen/btn_back_height"
        android:layout_marginLeft="@dimen/btn_back_marginLeft"
        android:layout_marginTop="@dimen/btn_back_marginTop"
        android:adjustViewBounds="true"
        android:background="@drawable/icon_back_"
        android:onClick="back"
        android:src="@drawable/icon_back_" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_background_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_rectangle"
        android:foregroundGravity="bottom">

        <TextView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_logo_marginTop"
            android:text="@string/login_logo_text"
            android:textColor="@color/login_logo_textColor"
            android:textSize="@dimen/login_logo_textSize" />

        <LinearLayout
            android:id="@+id/linear_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/resetPassword_group_newPassword_marginTop"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/register_tv_phone_width"
                android:layout_height="@dimen/login_tv_username_height"
                android:layout_marginEnd="@dimen/register_tv_phone_marginEnd"
                android:gravity="center"
                android:text="@string/resetPassword_tv_newPassword_text"
                android:textColor="@color/black"
                android:textSize="@dimen/login_tv_username_textSize" />

            <EditText
                android:id="@+id/resetPassword_et_password"
                android:layout_width="@dimen/register_et_username_width"
                android:layout_height="@dimen/login_et_username_height"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="center|start"
                android:hint="@string/resetPassword_et_newPassword_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/login_et_username_textColorHint"
                android:textSize="@dimen/login_tv_username_textSize"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_group_username_underline_height"
            android:layout_below="@id/linear_password"
            android:layout_alignLeft="@id/linear_password"
            android:layout_alignRight="@id/linear_password"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:id="@+id/linear_verifyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_password"
            android:layout_alignLeft="@id/linear_password"
            android:layout_alignRight="@+id/linear_password"
            android:layout_marginTop="@dimen/register_group_username_marginTop"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/register_tv_phone_width"
                android:layout_height="@dimen/login_tv_username_height"
                android:layout_marginEnd="@dimen/register_tv_phone_marginEnd"
                android:gravity="center"
                android:text="@string/resetPassword_tv_verifyPassword_text"
                android:textColor="@color/black"
                android:textSize="@dimen/login_tv_username_textSize" />

            <EditText
                android:id="@+id/resetPassword_et_verifyPassword"
                android:layout_width="@dimen/register_et_username_width"
                android:layout_height="@dimen/login_et_username_height"
                android:background="@null"
                android:gravity="center|start"
                android:hint="@string/resetPassword_et_verifyPassword_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/login_et_username_textColorHint"
                android:textSize="@dimen/login_tv_username_textSize"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_group_username_underline_height"
            android:layout_below="@id/linear_verifyPassword"
            android:layout_alignLeft="@id/linear_verifyPassword"
            android:layout_alignRight="@id/linear_verifyPassword"
            android:background="@drawable/shape_line" />

        <Button
            android:id="@+id/resetPassword_btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/linear_password"
            android:layout_alignRight="@id/linear_password"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/resetPassword_btn_reset_marginBottom"
            android:background="@drawable/btn_login"
            android:text="@string/resetPassword_btn_reset_text" />
    </RelativeLayout>

</RelativeLayout>